# neurotrain

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  PROJECT_STATE.md  PROMPT_GUIDELINES.md  README.md  TASK_NEUROBENCH_BPTT_BASELINE.md  benchmarking.py  experiment.py  main.py  prompts_summary.md  pyproject.toml  reproducibility.py  requirements.txt  run_all_benchmarks.py  run_exp_campaign.py  states_summary.md  test_decolle_mnist.py  test_eprop_integration.py
config/: README.md  benchmarking.yaml  benchmarking_vgg.yaml  experiments.yaml  paper.yaml  paper_benchmarking.yaml  paper_examples.yaml
configs/: README.md  benchmark_comparison.yaml  benchmarking.yaml  cifar10_default.yaml  cifar10_drtp.yaml  cifar10_ottt_repro.yaml  cifar10_stop_resnet18.yaml  cifar10_stop_vgg11.yaml  fashionmnist_default.yaml  mnist_bell.yaml  mnist_default.yaml  mnist_drtp.yaml  mnist_drtp_conv.yaml  mnist_ell.yaml  mnist_eprop.yaml  mnist_eprop_recurrent.yaml  mnist_esd_rtrl.yaml  mnist_etlp.yaml  mnist_fell.yaml  mnist_ostl.yaml  mnist_osttp.yaml  mnist_otpe.yaml  mnist_quantized.yaml  mnist_stllr.yaml  mnist_stop.yaml  mnist_tp.yaml  nmnist_ostl.yaml  svhn_stop_resnet18.yaml  svhn_stop_vgg11.yaml
docs/: ADVANCED.md  HOW_TO_BENCHMARK_YOUR_TRAINER.md  HOW_TO_RUN_CUSTOM_EXPERIMENTS.md  OTPE_IMPLEMENTATION_PLAN.md  configs_guide.md  drtp.md  ell_fell_bell_accuracy_analysis.md  prompts_summary.md  reproducibility_checks.md  states_summary.md  version_results.md
hpc/: bench.sbatch  bench_bptt.sbatch  bench_bptt_cifar10.sbatch  bench_bptt_dvscifar10.sbatch  bench_bptt_dvsgesture.sbatch  bench_bptt_fmnist.sbatch  bench_bptt_mnist.sbatch  bench_bptt_nmnist.sbatch  bench_bptt_svhn.sbatch  bench_decolle.sbatch  bench_decolle_cifar10.sbatch  bench_decolle_dvscifar10.sbatch  bench_decolle_dvsgesture.sbatch  bench_decolle_fmnist.sbatch  bench_decolle_mnist.sbatch  bench_decolle_nmnist.sbatch  bench_decolle_svhn.sbatch  bench_ell.sbatch  bench_ell_cifar10.sbatch  bench_ell_dvscifar10.sbatch  bench_ell_dvsgesture.sbatch  bench_ell_fmnist.sbatch  bench_ell_mnist.sbatch  bench_ell_nmnist.sbatch  bench_ell_svhn.sbatch  bench_eprop.sbatch  bench_eprop_cifar10.sbatch  bench_eprop_dvscifar10.sbatch  bench_eprop_dvsgesture.sbatch  bench_eprop_fmnist.sbatch  bench_eprop_mnist.sbatch  bench_eprop_nmnist.sbatch  bench_eprop_svhn.sbatch  bench_esd_rtrl.sbatch  bench_esd_rtrl_cifar10.sbatch  bench_esd_rtrl_dvscifar10.sbatch  bench_esd_rtrl_dvsgesture.sbatch  (+130 more)
hpc_tests/: Makefile  (+2 more)
(+4122 files in other folders)
